# xonsh-winget

./: .gitignore  README.md  build.xsh  pyproject.toml
.github/workflows/: build.yml  ci-nightly-build.yml  ci-release-build.yml  continuous.yml  dev-build-inno5.yml  dev-build.yml
inno/: README.md
templates/: xonsh_setup.iss.j2
templates/manifests/: installer.yaml.j2  locale.en-US.yaml.j2  version.yaml.j2
